@@ -25,7 +25,7 @@ class AddressBookPanel(Div):
 
         self.page_index = SequentialPageIndex(Address.all_addresses(), items_per_page=5)
         self.address_list = AddressList(view, self.page_index)
-        self.page_menu = PageMenu(view, 'page_menu', self.page_index, self.address_list, layout=HorizontalLayout())
+        self.page_menu = PageMenu(view, 'page_menu', self.page_index, self.address_list, menu_layout=HorizontalLayout())
         self.add_children([self.page_menu, self.address_list])
 
 
